monticore-generator/src/test/resources/cocos/invalid/A4003/A4003.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4003;

grammar A4002  {

  A;

}
